강현주 퍼블리셔님 작업분 업데이트.
강현주 퍼블리셔님 작업분 업데이트.

--- a/guide_pages/search_filter.html
+++ b/guide_pages/search_filter.html
@@ -16,22 +16,22 @@
     <header class="header">
         <h1 class="logo">
             <span class="logo_img"></span>
-            <span class="logo_text">표준관리시스템</span>
+            <span class="logo_text body14B">표준관리시스템</span>
         </h1>
         <ul class="gnb">
-            <li><a href="#">경영매뉴얼</a></li>
-            <li><a href="#">관리표준</a></li>
-            <li><a href="#">기술표준</a></li>
-            <li><a href="#">인증기록관리</a></li>
+            <li><a href="#" class="body16M">경영매뉴얼</a></li>
+            <li><a href="#" class="body16M">관리표준</a></li>
+            <li><a href="#" class="body16M">기술표준</a></li>
+            <li><a href="#" class="body16M">인증기록관리</a></li>
             <li class="oversea-corp">
-                <a href="#">해외법인</a>
+                <a href="#" class="body16M">해외법인</a>
                 <div class="gnb_sub">
-                    <button class="btn_gnb_sub">관리표준</button>
-                    <button class="btn_gnb_sub on">기술표준</button>
+                    <button class="body14R btn_gnb_sub">관리표준</button>
+                    <button class="body14R btn_gnb_sub on">기술표준</button>
                 </div>
             </li>
-            <li><a href="#">전사표준현황</a></li>
-            <li><a href="#">수급업체 작업표준</a></li>
+            <li><a href="#" class="body16M">전사표준현황</a></li>
+            <li><a href="#" class="body16M">수급업체 작업표준</a></li>
         </ul>
         <div class="quick_navi">
             <ul class="my_work">
@@ -54,7 +54,7 @@
             </ul>
 
             <button class="btn_my_menu">
-                <em>홍길동</em><span>책임</span>
+                <em class="body16M">홍길동</em><span class="body14M">책임</span>
             </button>
 
             <div class="my_quick_box" style="display:none;">
@@ -84,43 +84,43 @@
                 <button class="btn_quick_menu fold"></button>
                 <div class="quick_menu_box">
                     <div class="quick_top">
-                        <span>Quick Menu</span>
+                        <span class="body14M">Quick Menu</span>
                     </div>
                     <ul>
                         <li>
                             <a href="#" class="quick_m">
                                 <i class="ico_qm ico_qm_01"></i>
-                                <span>표준등록</span>
+                                <span class="summary12B">표준등록</span>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="quick_m">
                                 <i class="ico_qm ico_qm_02"></i>
-                                <span>내가 결재할 문서</span>
+                                <span class="summary12B">내가 결재할 문서</span>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="quick_m">
                                 <i class="ico_qm ico_qm_03"></i>
-                                <span>나의표준</span>
+                                <span class="summary12B">나의표준</span>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="quick_m">
                                 <i class="ico_qm ico_qm_04"></i>
-                                <span>팀 표준</span>
+                                <span class="summary12B">팀 표준</span>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="quick_m">
                                 <i class="ico_qm ico_qm_05"></i>
-                                <span>즐겨찾기</span>
+                                <span class="summary12B">즐겨찾기</span>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="quick_m">
                                 <i class="ico_qm ico_qm_06"></i>
-                                <span>정보 및 문의</span>
+                                <span class="summary12B">정보 및 문의</span>
                             </a>
                         </li>
                     </ul>
