--- a/guide_pages/styleguide_components.html
+++ b/guide_pages/styleguide_components.html
@@ -535,6 +535,89 @@
                 </div>
             </div>
 
+            <div class="flex">
+                <h3 class="title">Etc</h3>
+                <div class="cont" style="width:100%">
+                    <div style="">
+                        <h4>Tooltip</h4>
+                        <div class="flex" style="gap:10px">
+                            <div class="tooltip tooltip-up-left" style="display:block;width:240px;">
+                                <p class="caption11R">안녕하세요. 현대제철 표준관리 시스템 입니다.</p>
+                            </div>
+                            <div class="tooltip tooltip-up-right" style="display:block;width:240px;">
+                                <p class="caption11R">안녕하세요. 현대제철 표준관리 시스템 입니다.</p>
+                            </div>
+                            <div class="tooltip tooltip-down-left" style="display:block;width:240px;">
+                                <p class="caption11R">안녕하세요. 현대제철 표준관리 시스템 입니다.</p>
+                            </div>
+                            <div class="tooltip tooltip-down-right" style="display:block;width:240px;">
+                                <p class="caption11R">안녕하세요. 현대제철 표준관리 시스템 입니다.</p>
+                            </div>
+                        </div>
+                        <br><br>
+                        <div class="flex" style="gap:10px">
+                            <div class="tooltip tooltip-up-left" style="display:block;width:123px;">
+                                <p class="caption11R">당진, 순천공장의 XX 
+                                    프로세스에 적용 할 수
+                                    있는내용입니다.</p>
+                            </div>
+                            <div class="tooltip tooltip-up-right" style="display:block;width:123px;">
+                                <p class="caption11R">당진, 순천공장의 XX 
+                                    프로세스에 적용 할 수
+                                    있는내용입니다.</p>
+                            </div>
+                            <div class="tooltip tooltip-down-left" style="display:block;width:123px;">
+                                <p class="caption11R">당진, 순천공장의 XX 
+                                    프로세스에 적용 할 수
+                                    있는내용입니다.</p>
+                            </div>
+                            <div class="tooltip tooltip-down-right" style="display:block;width:123px;">
+                                <p class="caption11R">당진, 순천공장의 XX 
+                                    프로세스에 적용 할 수
+                                    있는내용입니다.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div style="margin-top:60px;">
+                        <h4>tab</h4>
+                        <div class="flex">
+                            <div class="tab_wrap">
+                                <div class="tab">
+                                    <span class="body14R ellipsis">텍스트가 길 경우 말줄임</span>
+                                    <button class="btn_tab_close">닫기</button>
+                                </div>
+                                <div class="tab">
+                                    <span class="body14R ellipsis">TEXT TEXT</span>
+                                    <button class="btn_tab_close">닫기</button>
+                                </div>
+                                <div class="tab">
+                                    <span class="body14R ellipsis">TEXT</span>
+                                    <button class="btn_tab_close">닫기</button>
+                                </div>
+                                <div class="tab active">
+                                    <span class="body14R ellipsis">결재함</span>
+                                    <button class="btn_tab_close">닫기</button>
+                                </div>
+                                <button class="btn_add_tab">탭추가</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="flex">
+                <h3 class="title"></h3>
+                <div class="cont flex">
+                    <div style="width:380px;margin-right:30px;">
+                        <h4></h4>
+                        <div class="flex">
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
     <!-- //container -->
