--- a/pages/SC_ADMIN_301.html
+++ b/pages/SC_ADMIN_301.html
@@ -20,9 +20,9 @@
             <span class="logo_text body14B">표준관리시스템 시스템관리</span>
         </h1>
         <ul class="gnb">
-            <li class="active"><a href="#" class="body16M">표준관리</a></li>
+            <li><a href="#" class="body16M">표준관리</a></li>
             <li><a href="#" class="body16M">해외법인 표준관리</a></li>
-            <li><a href="#" class="body16M">경영 매뉴얼</a></li>
+            <li class="active"><a href="#" class="body16M">경영 매뉴얼</a></li>
             <li><a href="#" class="body16M">수급업체 작업표준</a></li>
             <li><a href="#" class="body16M">이력 조회</a></li>
             <li><a href="#" class="body16M">시스템 관리</a></li>
@@ -44,12 +44,7 @@
                 <!-- SNB -->
                 <div class="left_filter_cont">
                     <ul class="snb">
-                        <li class="active"><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb1_1.svg"></div>관리표준 분류 체계</a></li>
-                        <li><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb1_2.svg"></div>기술표준 분류 체계</a></li>
-                        <li><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb1_3.svg"></div>유효성 평가표</a></li>
-                        <li><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb1_4.svg"></div>결재 모니터링</a></li>
-                        <li><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb1_5.svg"></div>담당 부서 삭제된 표준</a></li>
-                        <li><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb1_6.svg"></div>폐기된 표준</a></li>
+                        <li class="active"><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb3_1.svg"></div>인증 기록 분류 체계</a></li>
                     </ul>
                 </div>
                 <!-- //SNB -->
@@ -57,14 +52,14 @@
 
                 <div class="content">
                     <ol class="breadcrumb">
-                        <li>표준 관리</li>
-                        <li class="on">관리표준 분류 체계</li>
+                        <li>경영 매뉴얼</li>
+                        <li class="on">경영 매뉴얼 분류 체계</li>
                     </ol>
 
                     <!-- 왼쪽에 트리가 위치하는 경우의 cont -->
                     <div class="Wrap_tree_cont">
                         <div class="l_Side">
-                            <h3 class="title head18B">표준 분류</h3>
+                            <h3 class="title head18B">분류 체계</h3>
                             <!--트리맵-->
                             <div class="portlet_edit_left">
                                 <div class="srch_portlet">
@@ -291,17 +286,13 @@
 
                             <div class="box-white">
                                 <div class="title">
-                                    <h4 class="head20B">환경/에너지</h4>
+                                    <h4 class="head20B">ISO/IATF</h4>
+                                    <ol class="breadcrumb">
+                                        <li>품질</li>
+                                        <li class="on">당진</li>
+                                    </ol>
                                 </div>
                                 <ul class="box-in-form">
-                                    <li class="table w100">
-                                        <div class="th form-tit tit2">
-                                            <p class="list-dot body14B">표준 번호</p>
-                                        </div>
-                                        <div class="td form-div">
-                                            <p class="body14R fc-500">관리표준 > 판재사업본부</p>
-                                        </div>
-                                    </li>
                                     <li class="table">
                                         <div class="th form-tit tit2">
                                             <p class="list-dot body14B">등록일</p>
@@ -318,15 +309,7 @@
                                             <p class="body14R fc-500">2024-11-11</p>
                                         </div>
                                     </li>
-                                    <li class="table">
-                                        <div class="th form-tit tit2">
-                                            <p class="list-dot body14B">표준기호</p>
-                                        </div>
-                                        <div class="td form-div">
-                                            <p class="body14R fc-500">R</p>
-                                        </div>
-                                    </li>
-                                    <li class="table">
+                                    <li class="table w100">
                                         <div class="th form-tit tit2">
                                             <p class="list-dot body14B">정렬 순서</p>
                                         </div>
@@ -334,12 +317,73 @@
                                             <p class="body14R fc-500">010</p>
                                         </div>
                                     </li>
+
+                                    <li class="table w100 pay_detail">
+                                        <div class="th form-tit tit2">
+                                            <h5 class="list-dot body14B">권한 관리</h5>
+                                        </div>
+                                        <ul class="box-in-form">
+                                            <li class="table w100">
+                                                <div class="th form-tit tit2">
+                                                    <p class="list-dot body14B">읽기</p>
+                                                </div>
+                                                <div class="td form-div">
+                                                    <ul class="authList">
+                                                        <li>
+                                                            <div class="body14R fc-500"><div class="ico"><img src="../assets/images_admin/auth_sort_ico01.svg"></div>현대 제철</div>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </li>
+                                            <li class="table w100">
+                                                <div class="th form-tit tit2">
+                                                    <p class="list-dot body14B">쓰기</p>
+                                                </div>
+                                                <div class="td form-div">
+                                                    <ul class="authList">
+                                                        <li>
+                                                            <div class="body14R fc-500"><div class="ico"><img src="../assets/images_admin/auth_sort_ico02.svg"></div>현대제철표준팀</div>
+                                                            <ul class="teamNm">
+                                                                <li class="summary12R">현대제철</li>
+                                                                <li class="summary12R">ㅇㅇㅇ본부</li>
+                                                                <li class="summary12R">XXX 실</li>
+                                                            </ul>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </li>
+                                            <li class="table w100">
+                                                <div class="th form-tit tit2">
+                                                    <p class="list-dot body14B">쓰기</p>
+                                                </div>
+                                                <div class="td form-div">
+                                                    <ul class="authList">
+                                                        <li>
+                                                            <div class="body14R fc-500"><div class="ico person"><img src="../assets/images_admin/auth_sort_ico_person.svg"></div>정혜정</div>
+                                                            <ul class="teamNm">
+                                                                <li class="summary12R">XXX 실</li>
+                                                            </ul>
+                                                            <button class="btn-del">삭제</button>
+                                                        </li>
+                                                        <li>
+                                                            <div class="body14R fc-500"><div class="ico person"><img src="../assets/images_admin/auth_sort_ico_person.svg"></div>정혜정</div>
+                                                            <ul class="teamNm">
+                                                                <li class="summary12R">XXX 실</li>
+                                                            </ul>
+                                                            <button class="btn-del">삭제</button>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </li>
+                                        </ul>
+                                    </li>
+
                                     <li class="table w100">
                                         <div class="th form-tit tit2">
                                             <p class="list-dot body14B">설명</p>
                                         </div>
                                         <div class="td form-div">
-                                            <p class="body14R fc-500">-</p>
+                                            <p class="body14R fc-500">IATF 16949:2016은 자동차 산업 공급망 및 조립 공정에서 결함 예방과 변형 및 낭비 감소를 강조하면서 지속적인 개선을 제공하는 품질 관리시스템 개발을 목표로 하는 기술 사양이다. ISO 9001 표준을 기반으로 하며 1999년 6월에 첫 번째 버전인 ISO/TS 16949:1999가 발표되었다.</p>
                                         </div>
                                     </li>
                                 </ul>
