--- a/pages_usr/SC_ENGR_002.html
+++ b/pages_usr/SC_ENGR_002.html
@@ -744,7 +744,7 @@
                                             <span style="width:80px;text-align:center;flex-shrink:0;">작업 표준</span>
                                             <button class="btn btn-line-01 btn-medium" style="width:123px;flex-shrink:0;"><span>중복확인</span></button>
                                         </div>
-                                        <p class="body14R fc-600" style="margin:4px 8px;">! 표준명은 ‘(당진, 순천) 열연 XXX 작업 표준‘ 으로 등록됩니다.<br>
+                                        <p class="body14R fc-600" style="margin:4px 8px;">표준명은 ‘(당진, 순천) 열연 XXX 작업 표준‘ 으로 등록됩니다.<br> <!-- 수정250206 -->
                                         <p class="body14R fc-error" style="margin:4px 8px;">표준명을 입력해 주십시오.</em></p>
                                     </div>
                                 </li>
@@ -753,7 +753,7 @@
                                         <p class="list-dot body14B">표준 번호</p>
                                     </div>
                                     <div class="td form-div">
-                                        <p class="body14R fc-500">! 표준번호는 등록이 완료되면 자동으로 발급됩니다.</p>
+                                        <p class="body14R fc-400 flex items-center"><img src="../assets/images/svg/ico_info.svg"> <span class="ml8">표준번호는 등록이 완료되면 자동으로 발급됩니다.</span></p><!-- 수정250206 -->
                                     </div>
                                 </li>
                                 <li class="table">
