--- a/pages_usr/SC_MGMT_006.html
+++ b/pages_usr/SC_MGMT_006.html
@@ -408,10 +408,30 @@
                                             <tr>
                                                 <th><span class="body14M">평가 문항</span></th>
                                                 <th><span class="body14M">평가 내용</span></th>
-                                                <th class="th_flex"><span class="body14M txt">평가 결과</span><button class="btn_more_vert"></button></th>
+
+                                                <!-- 수정240206 -->
+                                                <th class="th_flex posiR">
+                                                    <span class="body14M txt">평가 결과</span><button class="btn_more_vert open-list-layer"></button>
+                                                    <div class="list-layer" style="width:200px;right:0;top:43px;">
+                                                        <ul>
+                                                            <li>
+                                                                <a class="body14R" href="#">모두 ‘예'</a>
+                                                            </li>
+                                                            <li>
+                                                                <a class="body14R" href="#">모두 ‘아니오'</a>
+                                                            </li>
+                                                            <li>
+                                                                <a class="body14R" href="#">초기화</a>
+                                                            </li>
+                                                        </ul>
+                                                        <!-- <button class="btn-close-layer"></button> -->
+                                                    </div>
+                                                </th>
+                                                <!-- //수정240206 -->
                                             </tr>
                                         </thead>
                                         <tbody>
+                                            <!-- 수정240206 -->
                                             <tr>
                                                 <td class="body14R" rowspan="2">결재/협조정보</td>
                                                 <td>000 변경에 따른 표준 개정</td>
@@ -431,6 +451,7 @@
                                                     </div>
                                                 </td>
                                             </tr>
+                                            <!-- //수정240206 -->
                                             <tr>
                                                 <td class="body14R">표제부</td>
                                                 <td>지적 사항 확인 내용 추가</td>
@@ -469,6 +490,7 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <!-- 수정240206 -->
                                         <div class="list">
                                             <div class="form_cont">
                                                 <div class="form_tit2">
@@ -481,6 +503,7 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <!-- //수정240206 -->
 
                                         <div class="list">
                                             <div class="form_cont">
