이력 조회 업로드
이력 조회 페이지 업로드
메인 대시보드 업데이트

--- a/pages/SC_ADMIN_MAIN.html
+++ b/pages/SC_ADMIN_MAIN.html
@@ -11,6 +11,7 @@
     </head>
     
     <body>
+
         <div class="main_wrapper">
         
             <!-- header -->
@@ -23,7 +24,7 @@
                     <li><a href="#" class="body16M">표준관리</a></li>
                     <li><a href="#" class="body16M">해외법인 표준관리</a></li>
                     <li><a href="#" class="body16M">경영 매뉴얼</a></li>
-                    <li class="active"><a href="#" class="body16M">수급업체 작업표준</a></li>
+                    <li><a href="#" class="body16M">수급업체 작업표준</a></li>
                     <li><a href="#" class="body16M">이력 조회</a></li>
                     <li><a href="#" class="body16M">시스템 관리</a></li>
                 </ul>
