이력조회 아이콘 추가
아이콘 추가
사이트맵에 해당 메뉴 완료 처리

--- a/pages/SC_ADMIN_401.html
+++ b/pages/SC_ADMIN_401.html
@@ -45,7 +45,7 @@
                 <!-- SNB -->
                 <div class="left_filter_cont">
                     <ul class="snb">
-                        <li class="active"><a href="#" class="body16B"><i class="ico_snb admin_snb01"></i>이력조회</a></li>
+                        <li class="active"><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb4_1.svg"></div>이력 조회</a></li>
                     </ul>
                 </div>
                 <!-- //SNB -->
