--- a/admin_sitemap.html
+++ b/admin_sitemap.html
@@ -282,7 +282,7 @@
               </div>
             </li>
             <li class="bg2">
-              <span class="sub-title">유효성 평가표 목록</span>
+              <span class="sub-title">유효성 평가표 목록 (<em class="fc-red">작업중</em>)</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_003.html" target="viewer">SC_ADMIN_003.html</a>
                 <a href="pages/SC_ADMIN_003.html" target="_blank" class="new-win">새창</a>
@@ -413,7 +413,7 @@
           </ul>
           <h2>시스템관리 [이력 조회]</h2>
           <ul>
-            <li class="bg2"> 
+            <li class="bg1"> 
               <span class="sub-title">이력 조회</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_401.html" target="viewer">SC_ADMIN_401.html</a>
