--- a/admin_sitemap.html
+++ b/admin_sitemap.html
@@ -281,8 +281,8 @@
                 <a href="pages/SC_ADMIN_002.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
-            <li class="bg2">
-              <span class="sub-title">유효성 평가표 목록 (<em class="fc-red">작업중</em>)</span>
+            <li class="bg1">
+              <span class="sub-title">유효성 평가표 목록</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_003.html" target="viewer">SC_ADMIN_003.html</a>
                 <a href="pages/SC_ADMIN_003.html" target="_blank" class="new-win">새창</a>
