002,102 완료. (이미지업로드 컴포넌트 완료)

--- a/pages/SC_ADMIN_001.html
+++ b/pages/SC_ADMIN_001.html
@@ -291,7 +291,9 @@
 
                             <div class="box-white">
                                 <div class="title">
-                                    <h4 class="head20B">환경/에너지</h4>
+                                    <div class="txtbox">
+                                        <h4 class="head20B">환경/에너지</h4>
+                                    </div>
                                 </div>
                                 <ul class="box-in-form">
                                     <li class="table w100">
