--- a/pages/SC_ADMIN_101.html
+++ b/pages/SC_ADMIN_101.html
@@ -44,7 +44,8 @@
                 <!-- SNB -->
                 <div class="left_filter_cont">
                     <ul class="snb">
-                        <li class="active"><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb3_1.svg"></div>인증 기록 분류 체계</a></li>
+                        <li class="active"><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb1_1.svg"></div>경영 매뉴얼 분류 체계</a></li>
+                        <li><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb1_4.svg"></div>결재 모니터링</a></li>
                     </ul>
                 </div>
                 <!-- //SNB -->
@@ -64,7 +65,7 @@
                             <div class="portlet_edit_left">
                                 <div class="srch_portlet">
                                     <div class="ipt_div">
-                                        <input type="text" placeholder="부서명">
+                                        <input type="text" placeholder="분류 체계명">
                                         <button type="reset" class="btn_del_keyword"></button>
                                     </div>
                                     <button class="btn_srch"></button>
@@ -286,6 +287,9 @@
 
                             <div class="box-white">
                                 <div class="title">
+                                    <div class="imgBox">
+                                        <img src="../assets/images_admin/thum_default.svg"> <!-- 기본이미지 -->
+                                    </div>
                                     <div class="txtbox">
                                         <h4 class="head20B">ISO/IATF</h4>
                                         <ol class="breadcrumb">
