--- a/admin_sitemap.html
+++ b/admin_sitemap.html
@@ -268,13 +268,13 @@
           <h2>시스템관리 [표준관리]</h2>
           <ul>
             <li class="bg1"> 
-              <span class="sub-title">표준- 분류 체계</span>
+              <span class="sub-title">표준- 분류 체계 (<em class="fc-red">추후 트리작업</em>)</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_001.html" target="viewer">SC_ADMIN_001.html</a>
                 <a href="pages/SC_ADMIN_001.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
-            <li class="bg2">
+            <li class="bg1">
               <span class="sub-title">표준 분류 - 편집</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_002.html" target="viewer">SC_ADMIN_002.html</a>
@@ -347,14 +347,14 @@
           </ul>
           <h2>시스템관리 [경영매뉴얼]</h2>
           <ul>
-            <li class="bg2"> 
-              <span class="sub-title">경영매뉴얼 - 분류체계 (<em class="fc-red">작업중</em>)</span>
+            <li class="bg1"> 
+              <span class="sub-title">경영매뉴얼 - 분류체계 (<em class="fc-red">추후 트리작업</em>)</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_101.html" target="viewer">SC_ADMIN_101.html</a>
                 <a href="pages/SC_ADMIN_101.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
-            <li class="bg2"> 
+            <li class="bg1"> 
               <span class="sub-title">경영 매뉴얼 분류 체계– 편집</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_102.html" target="viewer">SC_ADMIN_102.html</a>
@@ -396,8 +396,8 @@
           </ul>
           <h2>시스템관리 [인증기록 분류 체계]</h2>
           <ul>
-            <li class="bg2"> 
-              <span class="sub-title">인증 기록 - 분류 체계 (<em class="fc-red">작업중</em>)</span>
+            <li class="bg1"> 
+              <span class="sub-title">인증 기록 - 분류 체계 (<em class="fc-red">추후 트리작업</em>)</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_301.html" target="viewer">SC_ADMIN_301.html</a>
                 <a href="pages/SC_ADMIN_301.html" target="_blank" class="new-win">새창</a>
@@ -424,7 +424,7 @@
           <h2>시스템관리 [시스템관리]</h2>
           <ul>
             <li class="bg2"> 
-              <span class="sub-title">부서 및 사용자 관리  (<em class="fc-red">작업중</em>)</span>
+              <span class="sub-title">부서 및 사용자 관리</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_501.html" target="viewer">SC_ADMIN_501.html</a>
                 <a href="pages/SC_ADMIN_501.html" target="_blank" class="new-win">새창</a>
@@ -445,7 +445,7 @@
               </div>
             </li>
             <li class="bg2"> 
-              <span class="sub-title">시스템 그룹 관리 (<em class="fc-red">작업중</em>)</span> 
+              <span class="sub-title">시스템 그룹 관리</span> 
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_504.html" target="viewer">SC_ADMIN_504.html</a>
                 <a href="pages/SC_ADMIN_504.html" target="_blank" class="new-win">새창</a>
