--- a/admin_sitemap.html
+++ b/admin_sitemap.html
@@ -289,7 +289,7 @@
               </div>
             </li>
             <li class="bg2">
-              <span class="sub-title">유효성 평가표 - 편집</span>
+              <span class="sub-title">유효성 평가표 - 편집 (<em class="fc-red">작업중</em>)</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_004.html" target="viewer">SC_ADMIN_004.html</a>
                 <a href="pages/SC_ADMIN_004.html" target="_blank" class="new-win">새창</a>
@@ -403,7 +403,7 @@
                 <a href="pages/SC_ADMIN_301.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
-            <li class="bg2"> 
+            <li class="bg1"> 
               <span class="sub-title">인증 기록 분류 체계– 문서 구분 관리</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_302.html" target="viewer">SC_ADMIN_302.html</a>
